# orwellian

./: README.md  README.rst  pyproject.toml
.github/workflows/: python-tests.yml
orwellian/: laws.py
tests/: test_laws.py
